[project]
name = "datalake-solo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.1.20",
    "langchain-community>=0.0.38",
    "langchain-openai>=1.1.7",
    "openai>=1.30.0",
    "pydantic>=2.12.5",
    "pyviz-comms>=3.0.6",
]
